protocolsdir = $(datadir)/gossip/protocols

protocols_DATA =		\
	gossip-protocol.dtd	\
	aim.protocol 		\
	gossip-aim.png		\
	icq.protocol 		\
	gossip-icq.png 		\
	msn.protocol 		\
	gossip-msn.png		\
	yahoo.protocol 		\
	gossip-yahoo.png

stockdir = $(datadir)/gossip

stock_DATA =			\
	gossip-aim.png		\
	gossip-icq.png 		\
	gossip-msn.png		\
	gossip-yahoo.png

EXTRA_DIST = $(protocols_DATA) $(stock_DATA)
